# OS

./: Killer.cpp  User.cpp  buffered_channel.h
OS_lab1_linux/: CMakeLists.txt  Vector.cpp
OS_lab1_linux/lab1-linux/: Number.cpp  Number.h  Vector.cpp  Vector.h  main.cpp  run.sh
OS_lab1_windows/: CMakeLists.txt  Number.cpp  Number.h  Vector.h  main.cpp
OS_lab3/: CMakeLists.txt  Params1.cpp  Params3.cpp  Params3.h  Timer.cpp  main.cpp
OS_lab_3/: CMakeLists.txt  Params1.h  Params2.cpp  Params2.h  Timer.h  main.cpp
lab4-linux/: Killer.cpp  User.cpp  run.sh
lab5/: constants.h  main.cpp  procA.cpp  procM.cpp  procP.cpp  procS.cpp  run.sh
